[package]
name = "clawnch-protocol"
version = "0.1.0"
description = "AI agent-owned memecoin launchpad with real tokenomics on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.32.1"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
